# glfw-skeleton

./: .drone.yml  .gitignore  .gitignore.swp  .gitmodules  .travis.yml  CMakeLists.txt  CTestTestfile.cmake  LICENSE  Makefile  README.md  ccc  clean  compile  configure  index.html  params.json  rakefile  skull.shader
.github/workflows/: build.yml
docs/: index.html
docs/css/: styles.css
glfw-skeleton.blocksproj/: glfw-skeleton.cbp  glfw-skeleton.depend  glfw-skeleton.layout
glfw-skeleton.eclipseproj/: .cproject  .project
glfw-skeleton.vseproj/: glfw-skeleton.sdf  glfw-skeleton.sln  glfw-skeleton.vcxproj  glfw-skeleton.vcxproj.filters
glfw-skeleton.xcodeproj/: project.pbxproj
glfw-skeleton.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
glfw-skeleton.xcodeproj/project.xcworkspace/xcshareddata/: glfw-skeleton.xccheckout
include/: Adder.h  GLContext.hpp  Multiplier.h  Skeleton.hpp  skeleton.hpp
include/util/: camerahelper.hpp  colorhelper.hpp  colourhelper.hpp  pathhelper.hpp  shaderhelper.hpp
include/util/cli/: CLIParser.hpp  Configuration.hpp
include/util/log/: Logger.hpp  LoggerFactory.hpp
src/: Adder.cpp  CMakeLists.txt  GLContext.cpp  Multiplier.cpp  Skeleton.cpp  app.cpp  main.cpp  skeleton.cpp
src/shaders/: 2dcolor.frag  2dcolor.vert  EntityFragmentShader.fragmentshader  EntityVertexShader.vertexshader  Skull.fragmentshader  Skull.vertexshader  skull.fragmentShader  skull.fragmentshader  skull.vertexshader
src/util/: camerahelper.cpp  colorhelper.cpp  colourhelper.cpp  pathhelper.cpp  shaderhelper.cpp
src/util/cli/: CLIParser.cpp  Configuration.cpp
src/util/log/: Logger.cpp  LoggerFactory.cpp
stylesheets/: styles.css
test/: BanditWithGmock.h  CMakeLists.txt  GmockBDDAliases.h  MockAdder.h  banditrunner.cpp  skeletonSpec.cpp
test/fixtures/shaders/: 2dcolor.vert
test/specs/: SkeletonSpec.cpp
test/specs/util/: colorhelperSpec.cpp  colourhelperSpec.cpp  shaderhelperSpec.cpp
test/specs/util/cli/: CLIParserSpec.cpp  ConfigurationSpec.cpp
